crates/elenchus-solver/tests/snapshots/output_variants__consistent_with_derived.snap
---
source: crates/elenchus-solver/tests/output_variants.rs
expression: "report(r#\"\n        FACT x a\n        RULE r:\n            WHEN x a\n            THEN x b\n        CHECK x\n        \"#)"
---
RESULT: CONSISTENT
  DERIVED   x b = TRUE   from r (RULE)  [v.vrf:3]
SUMMARY: 0 conflicts, 0 underdetermined, 0 warnings, 1 derived
EXIT_CODE: 0
