crates/elenchus-solver/tests/snapshots/output_variants__knows_a_truth_is_silent.snap
---
source: crates/elenchus-solver/tests/output_variants.rs
expression: "report(\"FACT door locked\\nKNOWS alice door locked\\n\")"
---
RESULT: CONSISTENT
SUMMARY: 0 conflicts, 0 underdetermined, 0 warnings, 0 derived
EXIT_CODE: 0
