crates/elenchus-solver/tests/snapshots/output_variants__knows_the_unestablished_is_a_warning.snap
---
source: crates/elenchus-solver/tests/output_variants.rs
expression: "report(\"KNOWS alice door locked\\n\")"
---
RESULT: WARNING
  WARNING   - (KNOWS)  [v.vrf:2]
      blocked by: d.door locked
      fix: alice claims to know d.door locked, but it is not established — assert it (FACT/RULE) or use BELIEVES
SUMMARY: 0 conflicts, 0 underdetermined, 1 warnings, 0 derived
EXIT_CODE: 1
